# School_Rep_1

./: CMakeLists.txt  Circle.cpp  Circle.h  EqTriangle.cpp  EqTriangle.h  Figure.cpp  Figure.h  Funkcje.cpp  Funkcje.h  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Trapezium.cpp  Trapezium.h  array.cpp  array.h  main.c  main.cpp  mainPoint2.cpp  stack.c  stack.h  textSave.txt
